syntax = "proto3";

package role;

option go_package = "leadIt.role.v1;rolev1";
import "google/api/annotations.proto";

service Role {
  rpc addRole(AddRoleRequest) returns (AddRoleResponse) {
    option(google.api.http) = {
      post: "/v1/role/add"
      body: "*"
    };
  }
  rpc getRole(GetRoleRequest) returns (GetRoleResponse) {
    option(google.api.http) = {
      post: "/v1/role/get"
      body: "*"
    };
  }

  rpc getRoles(GetRolesRequest) returns (GetRolesResponse) {
    option(google.api.http) = {
      post: "/v1/role/get-many"
      body: "*"
    };
  }

  rpc updateRole(UpdateRoleRequest) returns (UpdateRoleResponse) {
    option(google.api.http) = {
      post: "/v1/role/update"
      body: "*"
    };
  }

  rpc deleteRole(DeleteRoleRequest) returns (DeleteRoleResponse) {
    option(google.api.http) = {
      post: "/v1/role/delete"
      body: "*"
    };
  }
}

message RoleType {
  int64 id = 1;
  string name = 2;
  int64 organization_id = 3;
  repeated string permissions = 4;
}

message AddRoleRequest {
  string name = 1;
  string description = 2;
  string image = 3;
}

message AddRoleResponse {
  int64 id = 1;
}

message GetRoleRequest {
  int64 id = 1;
}

message GetRoleResponse {
  RoleType role = 1;
}

message GetRolesRequest {
}

message GetRolesResponse {
  repeated RoleType roles = 1;
}

message UpdateRoleRequest {
  RoleType role = 1;
}

message UpdateRoleResponse {
  RoleType role = 1;
}

message DeleteRoleRequest {
  int64 id = 1;
}

message DeleteRoleResponse {
  int64 id = 1;
}
